--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -1,13 +1,6 @@
 {
-  "navbar": {
-    "label": "Zobrazit navigaci",
-    "home": "Domů",
-    "about": "O Nás",
-    "contacts": "Kontakty",
-    "drinks": "Nápojový Lístek",
-    "gallery": "Galerie"
-  },
   "home": {
+    "title": "Domů",
     "poster": {
       "altText": "Bar",
       "caption": {
@@ -37,8 +30,8 @@
           "Zatancujte si s populárními hity.",
           "Středa až sobota od 10 večer."
         ],
-        "buttonText": "Kontakty »",
-        "buttonLink": "contacts",
+        "buttonText": "Info »",
+        "buttonLink": "information",
         "image": "karaoke.jpg"
       },
       {
@@ -101,14 +94,6 @@
       }
     ]
   },
-  "info": {
-    "ageRestriction": "Vstup od 18",
-    "payments": [
-      "Pouze hotovost",
-      "Bankomat"
-    ],
-    "cloakroom": "Šatna"
-  },
   "about": {
     "title": "O Nás",
     "quote": [
@@ -139,8 +124,8 @@
       "hours": "22:00 - 6:00"
     }
   ],
-  "contact": {
-    "title": "Kontakty",
+  "information": {
+    "title": "Informace",
     "connections": "Spojení",
     "location": {
       "address": "Třebízského 4a, Praha 2",
@@ -162,6 +147,12 @@
     "opening_hours": {
       "heading": "Otevírací doba"
     },
+    "ageRestriction": "Vstup od 18",
+    "payments": [
+      "Pouze hotovost",
+      "Bankomat"
+    ],
+    "cloakroom": "Šatna",
     "additional_info": {
       "heading": "Další informace"
     },
@@ -966,5 +957,8 @@
         ]
       }
     ]
+  },
+  "navbar": {
+    "aria_label": "Zobrazit navigaci"
   }
 }
