basic event site - only posters

--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -106,6 +106,29 @@
       "Navštivte i naše další kluby v Praze."
     ]
   },
+  "events": {
+    "title": "Akce",
+    "event_list": [
+      {
+        "title": "21. narozeniny klubu TerMix",
+        "description": "Párty k výročí založení našeho klubu.",
+        "date": "24. 8. 2024",
+        "img_filename": "birthday-21_24"
+      },
+      {
+        "title": "Karaoke",
+        "date": "Každou středu",
+        "description": "Pojď se připojit ke známým hitům, nebo si jen zatančit.",
+        "img_filename": "karaoke_party_24"
+      },
+      {
+        "title": "Flirt party",
+        "description": "Ideální příležitost na seznámení. Najdi si partnera na rande, na flirt, nebo se přijď jen pobavit.",
+        "date": "10. 8. 2024",
+        "img_filename": "pride-flirt_24"
+      }
+    ]
+  },
   "opening_hours": [
     {
       "day": "Středa",
