contacts entrance image alt text fix

--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -170,7 +170,7 @@
       "map_button_text": "Otevřít mapy.cz"
     },
     "entrance_image": {
-      "alt": "Hlavní vchod"
+      "alt_text": "Hlavní vchod"
     },
     "opening_hours": {
       "heading": "Otevírací doba"
