no event message styling

--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -110,11 +110,12 @@
     "title": "Akce",
     "event_list": [
     ],
-    "aria-label-card": "Klikněte pro zobrazení informací",
+    "aria_label_card": "Klikněte pro zobrazení informací",
     "fb_button_text": [
       "Sledujte nás",
       "ať vám nic neunikne."
-    ]
+    ],
+    "no_events_message": ["Žádné blízké akce", "Ale i během běžného provozu si můžete užít plno zábavy."]
   },
   "opening_hours": [
     {
