--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -109,13 +109,23 @@
   "events": {
     "title": "Akce",
     "event_list": [
+      {
+        "title": "Karaoke",
+        "date": "Každou středu",
+        "description": "Pojď se připojit ke známým hitům, nebo si jen zatančit.",
+        "img_filename": "karaoke_party_24",
+        "aria-label": "Karaoke party, každou středu. DJ Marty Blue"
+      }
     ],
     "aria_label_card": "Klikněte pro zobrazení informací",
     "fb_button_text": [
       "Sledujte nás",
       "ať vám nic neunikne."
     ],
-    "no_events_message": ["Žádné blízké akce", "Ale i během běžného provozu si můžete užít plno zábavy."]
+    "no_events_message": [
+      "Žádné blízké akce",
+      "Ale i během běžného provozu si můžete užít plno zábavy."
+    ]
   },
   "opening_hours": [
     {
