--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -109,13 +109,23 @@
   "events": {
     "title": "Events",
     "event_list": [
+      {
+        "title": "Karaoke",
+        "date": "Every wednesday",
+        "description": "Join us to sing along to popular hits, or just come to dance.",
+        "img_filename": "karaoke_party_24",
+        "aria-label": "Karaoke party, every wednesday. DJ Marty Blue"
+      }
     ],
     "aria_label_card": "Click to see details",
     "fb_button_text": [
       "Follow us",
       "so you don't miss anything."
     ],
-    "no_events_message": ["No upcoming events", "But you can still have a great time during our usual schedule."]
+    "no_events_message": [
+      "No upcoming events",
+      "But you can still have a great time during our usual schedule."
+    ]
   },
   "opening_hours": [
     {
