remove termax from about, Garage logo changed styling, better description

--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -103,7 +103,7 @@
     "fb_button_text": "Pro novinky nás sledujte",
     "other_bars_title": [
       "Líbí se vám TerMix?",
-      "Navštivte i naše další kluby v Praze."
+      "Pro pikantnější zábavu zkuste Garage. (18+)"
     ]
   },
   "events": {
