--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -103,7 +103,7 @@
     "fb_button_text": "Follow us fow the news",
     "other_bars_title": [
       "Do you like TerMix?",
-      "Visit also our other clubs in Prague."
+      "For more spicy entertainment visit Garage. (18+)"
     ]
   },
   "events": {
