meta description home

--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -92,7 +92,8 @@
           "src_wide": "assets/img/night_life_wide.jpg"
         }
       }
-    ]
+    ],
+    "meta_description": "Dance & Night Club v Praze na Vinohradech. Všichni jsou vítáni! \uD83C\uDFF3\uFE0F\u200D\uD83C\uDF08 Skvělá hudba, zábavná atmosféra a úžasné koktejly."
   },
   "about": {
     "title": "O Nás",
