--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -92,7 +92,8 @@
           "src_wide": "assets/img/night_life_wide.jpg"
         }
       }
-    ]
+    ],
+     "meta_description": "Dance & Night Club in Central Prague. All are welcome! \uD83C\uDFF3\uFE0F\u200D\uD83C\uDF08 Great music, fun atmosphere, and amazing cocktails."
   },
   "about": {
     "title": "About Us",
