Update en.json meta description

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -93,7 +93,7 @@
         }
       }
     ],
-     "meta_description": "Dance & Night Club in Central Prague. All are welcome! \uD83C\uDFF3\uFE0F\u200D\uD83C\uDF08 Great music, fun atmosphere, and amazing cocktails."
+     "meta_description": "Dance & Night Club in Central Prague. All are welcome! 🌈 Great music, fun atmosphere, and amazing cocktails."
   },
   "about": {
     "title": "About Us",
