Update cs.json meta description

--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -93,7 +93,7 @@
         }
       }
     ],
-    "meta_description": "Dance & Night Club v Praze na Vinohradech. Všichni jsou vítáni! \uD83C\uDFF3\uFE0F\u200D\uD83C\uDF08 Skvělá hudba, zábavná atmosféra a úžasné koktejly."
+    "meta_description": "Dance & Night Club v Praze na Vinohradech. Všichni jsou vítáni! 🌈 Skvělá hudba, zábavná atmosféra a úžasné koktejly."
   },
   "about": {
     "title": "O Nás",
