--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -111,6 +111,13 @@
     "title": "Events",
     "event_list": [
       {
+        "title": "Incognito Party - TerMax",
+        "date": "26th October 2024",
+        "description": "",
+        "img_filename": "incognito",
+        "aria-label": ""
+      },
+      {
         "title": "Karaoke",
         "date": "Every wednesday",
         "description": "Join us to sing along to popular hits, or just come to dance.",
