--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -111,10 +111,10 @@
     "title": "Events",
     "event_list": [
       {
-        "title": "Incognito Party - TerMax",
-        "date": "26th October 2024",
-        "description": "",
-        "img_filename": "incognito",
+        "title": "Halloween Party",
+        "date": "November 1st and 2nd, 2024",
+        "description": "Let’s plan an event for next weekend too - HALLOWEEN AT TERMIX 🎃 We’re looking forward to seeing you and your outfits 🧙‍♂️",
+        "img_filename": "halloween",
         "aria-label": ""
       },
       {
