--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -111,10 +111,10 @@
     "title": "Akce",
     "event_list": [
       {
-        "title": "Inkognito Party - TerMax",
-        "date": "26. 10. 2024",
-        "description": "",
-        "img_filename": "incognito",
+        "title": "Halloween Party",
+        "date": "1.11. a 2.11. 2024",
+        "description": "A rovnou si tu naplánujeme i akci na příští víkend - HALLOWEEN V TERMIXU🎃 Budeme se těšit na vás a na vaše outfity🧙‍♂️",
+        "img_filename": "halloween",
         "aria-label": ""
       },
       {
