--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -109,27 +109,20 @@
   },
   "events": {
     "title": "Akce",
-    "event_list": [  
-      {
-        "title": "Víkendová vánoční párty",
-        "date": "20. - 21. prosince",
-        "description": "Oslavte víkend plný zábavy a vánoční atmosféry.",
-        "img_filename": "christmas_weekend",
-        "aria_label": "Víkendová vánoční párty v Clubu TerMix, 20. - 21. prosince"
-      },
-      {
-        "title": "Vánoční párty",
-        "date": "24. prosince",
-        "description": "Připojte se k nám na kouzelnou vánoční oslavu plnou sváteční nálady a hudby.",
-        "img_filename": "christmas",
-        "aria_label": "Vánoční párty v Clubu TerMix, 24. prosince"
-      },
+    "event_list": [
       {
         "title": "Silvestrovská párty",
         "date": "31. prosince - 1. ledna",
         "description": "Přivítejte nový rok ve stylu s hudbou a vzrušením na Silvestrovské párty v Clubu TerMax.",
         "img_filename": "silvester",
         "aria_label": "Silvestrovská párty v Clubu TerMax, 31. prosince - 1. ledna"
+      },
+      {
+        "title": "Rozloučení se starým Termixem",
+        "date": "3. - 4. leden 2025",
+        "description": "Budeme opravdu rádi, když se s námi dorazíte 3.-4.2025 rozloučit s původní verzí Termixu a podepíšete se nám na památkové plátno, které pověsíme do nového klubu Termix (postaru Termax), který bude otevřen hned ten další víkend, aby nikdo z vás nepřišel o zábavu🤍",
+        "img_filename": "last_weekend",
+        "aria_label": "Rozloučení se starým Termixem, 3. - 4. leden 2025"
       },
       {
         "title": "Prosincový program",
