--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -111,26 +111,19 @@
     "title": "Events",
     "event_list": [
       {
-        "title": "Christmas Weekend Bash",
-        "date": "December 20th - 21st",
-        "description": "Celebrate the holiday weekend with non-stop fun and festive vibes.",
-        "img_filename": "christmas_weekend",
-        "aria_label": "Christmas Weekend Bash at Club TerMix, December 20th - 21st"
-      },
-      {
-        "title": "Christmas Party",
-        "date": "December 24th",
-        "description": "Join us for a magical Christmas celebration, filled with festive cheer and music.",
-        "img_filename": "christmas",
-        "aria_label": "Christmas Party at Club TerMix, December 24th"
-      },
-      {
         "title": "New Year's Eve Party",
         "date": "December 31st - January 1st",
         "description": "Ring in the New Year with style, excitement, and music at the New Year's Eve Party at Club TerMax.",
         "img_filename": "silvester",
         "aria_label": "New Year's Eve Party at Club TerMax, December 31st - January 1st"
       },
+      {
+        "title": "Farewell to the Old Termix",
+        "date": "January 3 - 4, 2025",
+        "description": "We would be truly delighted if you joined us on January 3-4, 2025, to say goodbye to the original version of Termix and sign our commemorative canvas, which will be displayed in the new Termix club (formerly Termax), opening the very next weekend to keep the fun going! 🤍",
+        "img_filename": "last_weekend",
+        "aria_label": "Farewell to the Old Termix, January 3 - 4, 2025"
+      },      
       {
         "title": "December Program",
         "date": "",
