fix days in main page

--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -28,7 +28,7 @@
         "title": "Zábava",
         "description": [
           "Zatancujte si s populárními hity.",
-          "Středa až sobota od 10 večer."
+          "čtvrtek až sobota od 10 večer."
         ],
         "buttonText": "Info »",
         "buttonLink": "information",
