--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -110,34 +110,23 @@
   "events": {
     "title": "Akce",
     "event_list": [
-      {
-        "title": "Silvestrovská párty",
-        "date": "31. prosince - 1. ledna",
-        "description": "Přivítejte nový rok ve stylu s hudbou a vzrušením na Silvestrovské párty v Clubu TerMax.",
-        "img_filename": "silvester",
-        "aria_label": "Silvestrovská párty v Clubu TerMax, 31. prosince - 1. ledna"
-      },
-      {
-        "title": "Rozloučení se starým Termixem",
-        "date": "3. - 4. leden 2025",
-        "description": "Budeme opravdu rádi, když se s námi dorazíte 3.-4.2025 rozloučit s původní verzí Termixu a podepíšete se nám na památkové plátno, které pověsíme do nového klubu Termix (postaru Termax), který bude otevřen hned ten další víkend, aby nikdo z vás nepřišel o zábavu🤍",
-        "img_filename": "last_weekend",
-        "aria_label": "Rozloučení se starým Termixem, 3. - 4. leden 2025"
-      },
-      {
-        "title": "Prosincový program",
-        "date": "",
-        "description": "6. - 7. 12. Mikulášská párty (TerMax), 20. - 21. 12. Vánoční párty (Termix), 24. 12. Štědrovečerní párty (Termix) - 23:00 - 6:00, 25. - 26. 12. Zavřeno, 31. 12. Silvestr 2025 (TerMax), 1. - 2. 1. 2025 Zavřeno.",
-        "img_filename": "december",
-        "aria_label": "Prosincový program: Mikulášská párty, Vánoční párty, Štědrovečerní párty a další akce."
-      },
-      {
-        "title": "Karaoke",
-        "date": "Každou středu",
-        "description": "Pojď se připojit ke známým hitům, nebo si jen zatančit.",
-        "img_filename": "karaoke_party_24",
-        "aria-label": "Karaoke party, každou středu. DJ Marty Blue"
-      }
+      [
+        {
+          "title": "Nová Adresa",
+          "date": "",
+          "description": "Club Termix nově najdete na nové adrese Vinohradská 40. V prostorách kde býval dosud TerMax.",
+          "img_filename": "newAdress",
+          "aria_label": "Nová adresa pro Club Termix"
+        },
+        {
+          "title": "Oldies Nights",
+          "date": "Každý čtvrtek",
+          "description": "Přijďte si užít večer plný oldies hudby.",
+          "img_filename": "oldies",
+          "aria_label": "Oldies Nights každý čtvrtek"
+        }
+      ]
+      
     ],
     "aria_label_card": "Klikněte pro zobrazení informací",
     "fb_button_text": [
