change days in marketing section - dnacing

--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -83,7 +83,7 @@
           "Ukaž, jak to umíš rozjet."
         ],
         "description": [
-          "Roztočit to u nás můžes od středy do soboty.",
+          "Roztočit to u nás můžes od čtvrtka do soboty.",
           "Otevřeno máme od desíti až do rána."
         ],
         "image": {
