--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -111,6 +111,20 @@
     "title": "Events",
     "event_list": [
       {
+        "title": "Easter Party",
+        "date": "April 17–19",
+        "description": "Celebrate Easter with great music, good vibes, and unforgettable bar nights. Bring your friends and join the fun!",
+        "img_filename": "easter_party",
+        "aria_label": "Poster for the Easter Party at the bar, taking place April 17 to 19"
+      },
+      {
+        "title": "Sport Party",
+        "date": "May 2 & 3",
+        "description": "A party full of energy, dance beats, and vibrant bar atmosphere. Come enjoy the Sport Party your way!",
+        "img_filename": "sport_party",
+        "aria_label": "Poster for the Sport Party at the bar, taking place May 2 and 3"
+      },
+      {
         "title": "Oldies Nights",
         "date": "Every Thursday",
         "description": "Come and enjoy an evening full of oldies music.",
