carousel main page

--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -4,11 +4,7 @@
     "poster": {
       "altText": "Bar",
       "caption": {
-        "title": "Club Termix",
-        "subtitle": [
-          "Gay bar",
-          "v centru Prahy"
-        ]
+        "title": "Club Termix"
       }
     },
     "features": [
