--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -24,7 +24,7 @@
         "title": "Entertainment",
         "description": [
           "Dance to the popular songs.",
-          "Thu-Sat, from 10 PM."
+          "Fiday & Saturday, from 10 PM."
         ],
         "buttonText": "Info »",
         "buttonLink": "information",
